fixing error for overflowing header video (testing)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -70,7 +70,9 @@ ul {
 .main-header {
   position: relative;
   width: 100%;
-  height: 100vh; }
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: visible; }
   .main-header .header-content {
     position: absolute;
     top: 50%;
@@ -80,7 +82,7 @@ ul {
     transform: translate(-50%, -50%);
     text-align: center; }
   .main-header h1 {
-    font-size: 5rem;
+    font-size: 6rem;
     letter-spacing: 2px; }
   .main-header button {
     font-size: 1.5rem;
@@ -96,7 +98,7 @@ ul {
     text-transform: uppercase;
     letter-spacing: 2px;
     margin-top: 1.5em;
-    width: 80%;
+    width: 60%;
     cursor: pointer;
     font-weight: bold; }
   .main-header video {
@@ -106,11 +108,11 @@ ul {
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    min-width: 100%;
+    min-width: 100vw;
     min-height: 100%;
     width: auto;
     height: auto;
-    z-index: -3; }
+    z-index: -2; }
 
 .about-gallery {
   background: rgba(26, 26, 26, 0.12);
