--- a/assets/css/sections/main-header.scss
+++ b/assets/css/sections/main-header.scss
@@ -2,6 +2,8 @@
   position: relative;
   width: 100%;
   height: 100vh;
+  overflow-x: hidden;
+  overflow-y: visible;
 
   .header-content{
     @include center;
@@ -9,7 +11,7 @@
   }
 
   h1{
-    font-size: 5rem;
+    font-size: 6rem;
     letter-spacing: 2px;
   }
 
@@ -25,17 +27,17 @@
     text-transform: uppercase;
     letter-spacing: 2px;
     margin-top: 1.5em;
-    width: 80%;
+    width: 60%;
     cursor: pointer;
     font-weight: bold;
   }
 
   video{
     @include center;
-    min-width: 100%;
+    min-width: 100vw;
     min-height: 100%;
     width: auto;
     height: auto;
-    z-index: -3;
+    z-index: -2;
   }
 }
